# NERURAL-BET

./: .gitignore
NEURAL_BET/: .env.example  README.md  neuralbet.bat  neuralbet.ps1  pyproject.toml  requirements.txt
NEURAL_BET/docs/guides/: PROMPT_ENGINEERING.md  USER_GUIDE.md
NEURAL_BET/docs/plans/: ARCHITECTURE_AND_PLAN.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE4_REFACTORING_PLAN.md  TUI_IMPLEMENTATION_PLAN.md
NEURAL_BET/docs/reports/: CODE_AUDIT_REPORT.md
NEURAL_BET/src/: cli.py  main.py  tui.py
NEURAL_BET/src/agents/: base.py  data_miner.py  devils_advocate.py  dispatcher.py  market.py  metrician.py  orchestrator.py  psych.py  tactician.py  value_hunter.py  x_factor.py
NEURAL_BET/src/core/: cache.py  config.py  data_provider.py  exceptions.py  llm.py  market_provider.py  news_provider.py  schemas.py
NEURAL_BET/src/providers/: fbref_provider.py  google_news_provider.py  neural_bet_provider.py  understat_provider.py
NEURAL_BET/src/ui/: styles.tcss
NEURAL_BET/src/ui/widgets/: dashboard_widgets.py
NEURAL_BET/tests/: manual_understat_check.py  test_dispatcher.py  test_error_handling.py  test_error_handling_standalone.py  test_fbref_block.py  test_fotmob.py  test_search_fallback.py  test_soccerdata.py
